# iscore-addon-pd

./: CMakeLists.txt  iscore_addon_pd.cpp  iscore_addon_pd.hpp  score_addon_pd.cpp  score_addon_pd.hpp
Examples/: ex.pd
Pd/: ApplicationPlugin.cpp  ApplicationPlugin.hpp  DataflowClock.cpp  DataflowClock.hpp  DataflowObjects.hpp  DataflowProcess.cpp  DataflowProcess.hpp  DataflowWindow.hpp  DocumentPlugin.cpp  DocumentPlugin.hpp  PdFactory.hpp  PdLayer.hpp  PdMetadata.hpp  PdProcess.cpp  PdProcess.hpp
Pd/Commands/: EditConnection.cpp  EditConnection.hpp  EditPd.cpp  EditPd.hpp  EditPort.cpp  EditPort.hpp  PdCommandFactory.cpp  PdCommandFactory.hpp
Pd/Devices/: AudioDevice.cpp  AudioDevice.hpp
Pd/Executor/: Dataflow.hpp  PdExecutor.cpp  PdExecutor.hpp
Pd/Inspector/: DataflowWidget.cpp  DataflowWidget.hpp  PdInspectorWidget.cpp  PdInspectorWidget.hpp
Pd/UI/: AngleNode.hpp  AudioNode.hpp  AutomationNode.cpp  AutomationNode.hpp  ConstraintNode.cpp  ConstraintNode.hpp  DataflowProcessNode.cpp  DataflowProcessNode.hpp  LFO.hpp  MidiUtil.hpp  NodeItem.cpp  NodeItem.hpp  PdNode.cpp  PdNode.hpp  ScenarioNode.cpp  ScenarioNode.hpp  Slider.cpp  Slider.hpp  SoundNode.hpp  TestNode.hpp  VelToNote.hpp  View.hpp
Tests/: CMakeLists.txt  PdDataflowTest.cpp
